Fixed: particles position, (fixes unwanted scrollbar)

--- a/styles/Home.module.less
+++ b/styles/Home.module.less
@@ -8,7 +8,6 @@
   background-color: darken(@main-color, 6);
   position: absolute;
   z-index: -1;
-  top: 0;
   bottom: 0;
   right: 0;
   left: 0;
